--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,19 +10,6 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
-    services:
-      postgres:
-        image: postgres:13
-        env:
-          POSTGRES_DB: test_db
-          POSTGRES_USER: test_user
-          POSTGRES_PASSWORD: test_password
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-
     steps:
     - uses: actions/checkout@v4
 
@@ -41,7 +28,7 @@ jobs:
       env:
         SECRET_KEY: ${{ secrets.SECRET_KEY }}
         DEBUG: 0
-        DATABASE_URL: postgresql://test_user:test_password@localhost:5432/test_db
+        SENTRY_DSN: ${{ secrets.SENTRY_DSN }}  # Ajoutez cette ligne
       run: |
         python manage.py test --verbosity=2
         coverage run --source='.' manage.py test
