--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 django==3.0
 flake8==3.7.0
 pytest-django==3.9.0
-sentry-sdk
 python-dotenv
+gunicorn==20.1.0
+sentry-sdk==1.40.6
+whitenoise==6.6.0
