--- a/.dockerignore
+++ b/.dockerignore
@@ -13,3 +13,17 @@ venv/
 Dockerfile
 docker-compose.yml
 db.sqlite3
+.git
+.github
+.env
+*.pyc
+__pycache__
+Dockerfile
+.dockerignore
+README.md
+docker-compose.yml
+render.yaml
+.gitignore
+*.sqlite3
+db.sqlite3
+staticfiles/
